--- a/index.tex
+++ b/index.tex
@@ -465,11 +465,12 @@ model}\label{open-standards-using-fhir-as-the-common-data-model}
 
 The recent convergence to FHIR as the de facto standard for information
 exchange has fuelled the development of OpenHIE. FHIR is currently used
-both for routine healthcare settings \citep{ayaz2021fast} and clinical
-research settings \citep{duda2022hl7, vorisek2022fast} and is
-increasingly being used in LMICs as well. The guidelines and standards
-of the African Union explicitly state FHIR is to be used as the
-messaging standard \citep{2023african}. The FHIR-native OpenSRP platform
+both for routine healthcare settings
+\citep{amar2024electronic, ayaz2021fast} and clinical research settings
+\citep{duda2022hl7, vorisek2022fast} and is increasingly being used in
+LMICs as well. The guidelines and standards of the African Union
+explicitly state FHIR is to be used as the messaging standard
+\citep{2023african}. The FHIR-native OpenSRP platform
 \citep{mehl2020open} has been deployed in 14 countries targeting various
 patient populations, amongst which a reference implementation of the WHO
 antenatal and neonatal care guidelines for midwives in Lombok, Indonesia
