--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -118,7 +118,7 @@
   file = {/Users/dkapitan/Zotero/storage/VVA7ZIX5/Alunyu et al. - 2023 - State of Digital Health Communication Infrastructu.pdf}
 }
 
-@article{amar2024electronica,
+@article{amar2024electronic,
   title = {Electronic {{Health Record}} and {{Semantic Issues Using Fast Healthcare Interoperability Resources}}: {{Systematic Mapping Review}}},
   shorttitle = {Electronic {{Health Record}} and {{Semantic Issues Using Fast Healthcare Interoperability Resources}}},
   author = {Amar, Fouzia and April, Alain and Abran, Alain},
@@ -130,10 +130,10 @@
   pages = {e45209},
   publisher = {JMIR Publications Inc., Toronto, Canada},
   doi = {10.2196/45209},
-  urldate = {2024-03-05},
+  urldate = {2024-02-05},
   abstract = {Background: The increasing use of electronic health records and the Internet of Things has led to interoperability issues at different levels (structural and semantic). Standards are important not only for successfully exchanging data but also for appropriately interpreting them (semantic interoperability). Thus, to facilitate the semantic interoperability of data exchanged in health care, considerable resources have been deployed to improve the quality of shared clinical data by structuring and mapping them to the Fast Healthcare Interoperability Resources (FHIR) standard. Objective: The aims of this study are 2-fold: to inventory the studies on FHIR semantic interoperability resources and terminologies and to identify and classify the approaches and contributions proposed in these studies. Methods: A systematic mapping review (SMR) was conducted using 10 electronic databases as sources of information for inventory and review studies published during 2012 to 2022 on the development and improvement of semantic interoperability using the FHIR standard. Results: A total of 70 FHIR studies were selected and analyzed to identify FHIR resource types and terminologies from a semantic perspective. The proposed semantic approaches were classified into 6 categories, namely mapping (31/126, 24.6\%), terminology services (18/126, 14.3\%), resource description framework or web ontology language--based proposals (24/126, 19\%), annotation proposals (18/126, 14.3\%), machine learning (ML) and natural language processing (NLP) proposals (20/126, 15.9\%), and ontology-based proposals (15/126, 11.9\%). From 2012 to 2022, there has been continued research in 6 categories of approaches as well as in new and emerging annotations and ML and NLP proposals. This SMR also classifies the contributions of the selected studies into 5 categories: framework or architecture proposals, model proposals, technique proposals, comparison services, and tool proposals. The most frequent type of contribution is the proposal of a framework or architecture to enable semantic interoperability. Conclusions: This SMR provides a classification of the different solutions proposed to address semantic interoperability using FHIR at different levels: collecting, extracting and annotating data, modeling electronic health record data from legacy systems, and applying transformation and mapping to FHIR models and terminologies. The use of ML and NLP for unstructured data is promising and has been applied to specific use case scenarios. In addition, terminology services are needed to accelerate their use and adoption; furthermore, techniques and tools to automate annotation and ontology comparison should help reduce human interaction.},
   langid = {english},
-  file = {/Users/dkapitan/Zotero/storage/6CPSWXLH/Amar et al. - 2024 - Electronic Health Record and Semantic Issues Using.pdf;/Users/dkapitan/Zotero/storage/4RTXSFIA/e45209.html}
+  file = {/Users/dkapitan/Zotero/storage/SB5UTQHT/Amar et al. - 2024 - Electronic Health Record and Semantic Issues Using.pdf;/Users/dkapitan/Zotero/storage/WWWMYQR9/e45209.html}
 }
 
 @inproceedings{armbrust2021lakehouse,
@@ -145,6 +145,23 @@
   abstract = {This paper argues that the data warehouse architecture as we know it today will wither in the coming years and be replaced by a new architectural pattern, the Lakehouse, which will (i) be based on open direct-access data formats, such as Apache Parquet, (ii) have firstclass support for machine learning and data science, and (iii) offer state-of-the-art performance. Lakehouses can help address several major challenges with data warehouses, including data staleness, reliability, total cost of ownership, data lock-in, and limited use-case support. We discuss how the industry is already moving toward Lakehouses and how this shift may affect work in data management. We also report results from a Lakehouse system using Parquet that is competitive with popular cloud data warehouses on TPC-DS.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/VA53MTJ5/Armbrust et al. - 2021 - Lakehouse A New Generation of Open Platforms that.pdf}
+}
+
+@article{ashworth2022free,
+  title = {A {{Free}}, {{Open-Source}}, {{Offline Digital Health System}} for {{Refugee Care}}},
+  author = {Ashworth, Henry and Ebrahim, Senan and Ebrahim, Hassaan and Bhaiwala, Zahra and Chilazi, Michael},
+  year = {2022},
+  month = feb,
+  journal = {JMIR Medical Informatics},
+  volume = {10},
+  number = {2},
+  pages = {e33848},
+  issn = {2291-9694},
+  doi = {10.2196/33848},
+  urldate = {2024-04-18},
+  abstract = {Background: Rise of conflict, extreme weather events, and pandemics have led to larger displaced populations worldwide. Displaced populations have unique acute and chronic health needs that must be met by low-resource health systems. Electronic health records (EHRs) have been shown to improve health outcomes in displaced populations, but need to be adapted to meet the constraints of these health systems. Objective: The aim of this viewpoint is to describe the development and deployment of an EHR designed to care for displaced populations in low-resource settings. Methods: Using a human-centered design approach, we conducted in-depth interviews and focus groups with patients, health care providers, and administrators in Lebanon and Jordan to identify the essential EHR features. These features, including modular workflows, multilingual interfaces, and offline-first capabilities, led to the development of the Hikma Health EHR, which has been deployed in Lebanon and Nicaragua. Results: We report the successes and challenges from 12 months of Hikma Health EHR deployment in a mobile clinic providing care to Syrian refugees in Bekaa Valley, Lebanon. Successes include the EHR's ability to (1) increase clinical efficacy by providing detailed patient records, (2) be adaptable to the threats of COVID-19, and (3) improve organizational planning. Lessons learned include technical fixes to methods of identifying patients through name or their medical record ID. Conclusions: As the number of displaced people continues to rise globally, it is imperative that solutions are created to help maximize the health care they receive. Free, open-sourced, and adaptable EHRs can enable organizations to better provide for displaced populations.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/G5LSNU2R/Ashworth et al. - 2022 - A Free, Open-Source, Offline Digital Health System.pdf}
 }
 
 @article{ayaz2021fast,
@@ -209,6 +226,29 @@
   file = {/Users/dkapitan/Zotero/storage/KT8TWR62/Bagayoko et al. - 2023 - Effect of high-risk versus low-risk pregnancy at t.pdf}
 }
 
+@article{barcenafedxai,
+  title = {Fed-{{XAI}}: {{Federated Learning}} of {{Explainable Artificial Intelligence Models}}},
+  author = {B{\'a}rcena, Jos{\'e} Luis Corcuera and Daole, Mattia and Ducange, Pietro and Marcelloni, Francesco and Renda, Alessandro and Ruffini, Fabrizio and Schiavo, Alessio},
+  abstract = {The current era is characterized by an increasing pervasiveness of applications and services based on data processing and often built on Artificial Intelligence (AI) and, in particular, Machine Learning (ML) algorithms. In fact, extracting insights from data is so common in daily life of individuals, companies, and public entities and so relevant for the market players, to become an important matter of interest for institutional organizations. The theme is so relevant that ad hoc regulations have been proposed. One important aspect is given by the capability of the applications to tackle the data privacy issue. Additionally, depending on the specific application field, paramount importance is given to the possibility for the humans to understand why a certain AI/ML-based application is providing that specific output. In this paper, we discuss the concept of Federated Learning of eXplainable AI (XAI) models, in short FED-XAI, purposely designed to address these two requirements simultaneously. AI/ML models are trained with the simultaneous goals of preserving the data privacy (Federated Learning (FL) side) and ensuring a certain level of explainability of the system (XAI side). We first introduce the motivations at the foundation of FL and XAI, along with their basic concepts; then, we discuss the current status of this field of study, providing a brief survey regarding approaches, models, and results. Finally, we highlight the main future challenges.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/7ZQ2S8CC/Bárcena et al. - Fed-XAI Federated Learning of Explainable Artific.pdf}
+}
+
+@article{belov2021analysis,
+  title = {Analysis of {{Big Data Storage Tools}} for {{Data Lakes}} Based on {{Apache Hadoop Platform}}},
+  author = {Belov, Vladimir and Nikulchev, Evgeny},
+  year = {2021},
+  journal = {International Journal of Advanced Computer Science and Applications},
+  volume = {12},
+  number = {8},
+  issn = {21565570, 2158107X},
+  doi = {10.14569/IJACSA.2021.0120864},
+  urldate = {2024-04-18},
+  abstract = {When developing large data processing systems, the question of data storage arises. One of the modern tools for solving this problem is the so-called data lakes. Many implementations of data lakes use Apache Hadoop as a basic platform. Hadoop does not have a default data storage format, which leads to the task of choosing a data format when designing a data processing system. To solve this problem, it is necessary to proceed from the results of the assessment according to several criteria. In turn, experimental evaluation does not always give a complete understanding of the possibilities for working with a particular data storage format. In this case, it is necessary to study the features of the format, its internal structure, recommendations for use, etc. The article describes the features of both widely used data storage formats and the currently gaining popularity.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/R9WE28ZX/Belov and Nikulchev - 2021 - Analysis of Big Data Storage Tools for Data Lakes .pdf}
+}
+
 @article{bharatleveraging,
   title = {Leveraging {{ABDM Building Blocks}}:},
   author = {Bharat, Ayushman},
@@ -221,14 +261,6 @@
   author = {Bisquert, Aniol and Hmimou, Achraf and Berral, Josep Ll and {Gutierrez-Torre}, Alberto and Romero, Oscar},
   abstract = {Recently, significant milestones have been achieved in the field of healthcare data analysis. However, alongside these accomplishments, substantial data-related challenges have emerged in the domain of big data management. Modern healthcare projects are no more dealing with a single data repository but many heterogeneous ones and must overcome data variety, privacy and governance issues. Yet, current solutions face a privacy-decentralization trade-off. To address this dual challenge, we introduce HealthMesh, a novel layered architectural framework based on the Data Mesh principles, providing a domaindecentralised paradigm. In addition, the framework incorporates a Semantic Data Model which establishes robust governance, enables interoperability and guarantees policy compliance for all the data assets. To demonstrate the capabilities of the proposed approach, we provide an illustrative example inspired by the use case of the INCISIVE project for breast cancer analytics. Overall, this work makes a significant contribution on collecting key challenges, identifying actors and providing a set of components and guidelines for establishing a holistic framework for the complex field of healthcare data management.},
   langid = {english},
-  file = {/Users/dkapitan/Zotero/storage/VJF3DVBI/Bisquert et al. - HealthMesh An Architectural Framework for Federat.pdf}
-}
-
-@article{bisquerthealthmesha,
-  title = {{{HealthMesh}}: {{An Architectural Framework}} for {{Federated Healthcare Data Management}}},
-  author = {Bisquert, Aniol and Hmimou, Achraf and Berral, Josep Ll and {Gutierrez-Torre}, Alberto and Romero, Oscar},
-  abstract = {Recently, significant milestones have been achieved in the field of healthcare data analysis. However, alongside these accomplishments, substantial data-related challenges have emerged in the domain of big data management. Modern healthcare projects are no more dealing with a single data repository but many heterogeneous ones and must overcome data variety, privacy and governance issues. Yet, current solutions face a privacy-decentralization trade-off. To address this dual challenge, we introduce HealthMesh, a novel layered architectural framework based on the Data Mesh principles, providing a domaindecentralised paradigm. In addition, the framework incorporates a Semantic Data Model which establishes robust governance, enables interoperability and guarantees policy compliance for all the data assets. To demonstrate the capabilities of the proposed approach, we provide an illustrative example inspired by the use case of the INCISIVE project for breast cancer analytics. Overall, this work makes a significant contribution on collecting key challenges, identifying actors and providing a set of components and guidelines for establishing a holistic framework for the complex field of healthcare data management.},
-  langid = {english},
   file = {/Users/dkapitan/Zotero/storage/9SS5P8VB/bidquert2024healthmesh.pdf}
 }
 
@@ -237,6 +269,21 @@
   urldate = {2024-03-12},
   howpublished = {https://www-jstor-org.dianus.libr.tue.nl/stable/resrep33205.12},
   file = {/Users/dkapitan/Zotero/storage/DUQQGZLE/resrep33205.html}
+}
+
+@misc{choi2020building,
+  title = {Building {{Methods}} of {{Intelligent Data Catalog Based}} on {{Graph Database}} for {{Data Sharing Platform}}},
+  author = {Choi, Mi-Young and Moon, Chang-Joo and Jung, Sung-Jae},
+  year = {2020},
+  number = {10},
+  eprint = {10},
+  publisher = {ICIC International 学会},
+  doi = {10.24507/icicelb.11.10.953},
+  urldate = {2024-04-08},
+  abstract = {Recently, the private and public sectors are constantly registering various types of data on a data sharing platform or an open data platform and creating value through linkage and expansion of data. Data catalogs are tools that can help you quickly find and understand the data accumulated on these data-sharing platforms. In this paper, we propose a method to build a data catalog based on a graph database. In the graph database, the joins are significantly reduced compared to the relational type due to the structural characteristics, while the query processing performance is improved. We show the process of transferring the proposed data catalog from the relational data model to the graph data model. We show that the same information retrieval is performed with a simpler query and higher performance in the graph database.},
+  archiveprefix = {ICIC International 学会},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/L3GHECVG/Choi et al. - 2020 - Building Methods of Intelligent Data Catalog Based.pdf}
 }
 
 @article{chukwu2022electricity,
@@ -256,6 +303,13 @@
   copyright = {This is an open-access article distributed under the terms of the Creative Commons Attribution License (https://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work, first published JMIR Medical Informatics, is properly cited. The complete bibliographic information, a link to the original publication on https://medinform.jmir.org/, as well as this copyright and license information must be included.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/K2Z35F96/Chukwu et al. - 2022 - Electricity, Computing Hardware, and Internet Infr.pdf;/Users/dkapitan/Zotero/storage/PMEQ4IGS/e30040.html}
+}
+
+@misc{cohort,
+  title = {Cohort {{Profile}}: {{The Avon Longitudinal Study}} of {{Parents}} and {{Children}}: {{ALSPAC}} Mothers Cohort - {{PMC}}},
+  urldate = {2024-04-16},
+  howpublished = {https://www-ncbi-nlm-nih-gov.dianus.libr.tue.nl/pmc/articles/PMC3600619/},
+  file = {/Users/dkapitan/Zotero/storage/H94NHNPR/PMC3600619.html}
 }
 
 @article{cremonesi2023need,
@@ -416,10 +470,19 @@
   file = {/Users/dkapitan/Zotero/storage/EDKQA7MK/Dunn and Cosgun - 2023 - A cloud-based pipeline for analysis of FHIR and lo.pdf;/Users/dkapitan/Zotero/storage/ZENGUT9R/6994207.html}
 }
 
-@misc{experiences,
-  title = {Experiences of Mothers and Health Workers with {{MomCare}} and {{SafeCare}} Bundles in {{Kenya}} and {{Tanzania}}: {{A}} Qualitative Evaluation {\textbar} {{PLOS ONE}}},
-  urldate = {2024-02-27},
-  howpublished = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0294536}
+@inproceedings{eapen2019drishti,
+  title = {Drishti: {{A Sense-Plan-Act Extension}} to {{Open mHealth Framework Using FHIR}}},
+  shorttitle = {Drishti},
+  booktitle = {2019 {{IEEE}}/{{ACM}} 1st {{International Workshop}} on {{Software Engineering}} for {{Healthcare}} ({{SEH}})},
+  author = {Eapen, Bell Raj and Archer, Norm and Sartipi, Kamran and Yuan, Yufei},
+  year = {2019},
+  month = may,
+  pages = {49--52},
+  doi = {10.1109/SEH.2019.00016},
+  urldate = {2024-04-15},
+  abstract = {Mobile Health (mHealth) is vital in promoting a collaborative healthcare model. Disparate mHealth Apps that do not talk to each other make complex behavioural interventions difficult. Open mHealth is a schema and framework for facilitating health information exchange for mHealth apps. We propose an extension to open mHealth for behavioural interventions. We call our proposed extension; Drishti (yogic gaze). It applies the sense-plan-act paradigm from robotics. We offer an open-source implementation of Drishti, and we evaluate it using a design science research framework.},
+  keywords = {Biomedical monitoring,Data models,FHIR,Information systems,Interoperability,Medical services,mHealth,Monitoring,Open source software,Standards},
+  file = {/Users/dkapitan/Zotero/storage/8254YBP3/Eapen et al. - 2019 - Drishti A Sense-Plan-Act Extension to Open mHealt.pdf;/Users/dkapitan/Zotero/storage/BZSWAYM6/8823907.html}
 }
 
 @inproceedings{fayad2005scalable,
@@ -442,6 +505,28 @@
   title = {Flask-{{Multipass}} --- {{Flask-Multipass}} 0.5.3 Documentation},
   urldate = {2024-02-09},
   howpublished = {https://flask-multipass.readthedocs.io/en/latest/}
+}
+
+@misc{fullb,
+  title = {Full Article: {{Comparative}} Assessment of the Human and Animal Health Surveillance Systems in {{Tanzania}}: {{Opportunities}} for an Integrated One Health Surveillance Platform},
+  urldate = {2024-04-16},
+  howpublished = {https://www-tandfonline-com.dianus.libr.tue.nl/doi/full/10.1080/17441692.2022.2110921},
+  file = {/Users/dkapitan/Zotero/storage/LY6AUY49/17441692.2022.html}
+}
+
+@article{gamal2021integrated,
+  title = {Integrated {{Document-based Electronic Health Records Persistence Framework}}},
+  author = {Gamal, Aya and Barakat, Sherif and Rezk, Amira},
+  year = {2021},
+  journal = {International Journal of Advanced Computer Science and Applications},
+  volume = {12},
+  number = {10},
+  issn = {21565570, 2158107X},
+  doi = {10.14569/IJACSA.2021.0121017},
+  urldate = {2024-04-15},
+  abstract = {Electronic health record systems work beyond just recording patients` health data. They have multiple secondary functionalities, such as data reporting and clinical decision support. As each of these systems` workloads has contradictory different needs, managing a multipurpose electronic health record is a challenge. This paper proposes a unified healthcare data framework that can simplify health information system infrastructure. It investigates the suitability of the documentbased NoSQL persistence mechanism, storing electronic health records data as a design choice for managing varied complexity ad hoc queries used in operational business intelligence. The performance of the most popular two document-based NoSQL back-ends, Couchbase Server and MongoDB, is compared according to the size of the database and query execution time. Results showed that while MongoDB can execute simple singledocument queries nearly in milliseconds. It does not provide satisfactory response time for unplanned complex queries spanning multiple documents. By utilizing its analytics services and multi-dimensional scaling architecture, Couchbase Server multi-node cluster outperforms the response times of MongoDB for both simple and complex healthcare data access patterns. The primary advantage of the proposed tightly coupled EHRs processing framework is its flexibility to manage workload according to changing requirements.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/EYHHSXJU/Gamal et al. - 2021 - Integrated Document-based Electronic Health Record.pdf}
 }
 
 @article{gebreslassie2023fhir4fair,
@@ -514,6 +599,22 @@
   langid = {english},
   keywords = {Databases Factual,Information Dissemination,Information Storage and Retrieval,Medical Informatics,Metadata},
   file = {/Users/dkapitan/Zotero/storage/RRF87LYK/Guillot et al. - 2023 - FAIR sharing of health data a systematic review o.pdf}
+}
+
+@inproceedings{hai2023amalura,
+  title = {Amalur: {{Data Integration Meets Machine Learning}}},
+  shorttitle = {Amalur},
+  booktitle = {2023 {{IEEE}} 39th {{International Conference}} on {{Data Engineering}} ({{ICDE}})},
+  author = {Hai, Rihan and Koutras, Christos and Ionescu, Andra and Li, Ziyu and Sun, Wenbo and {van Schijndel}, Jessie and Kang, Yan and Katsifodimos, Asterios},
+  year = {2023},
+  month = apr,
+  pages = {3729--3739},
+  issn = {2375-026X},
+  doi = {10.1109/ICDE55515.2023.00301},
+  urldate = {2024-04-02},
+  abstract = {Machine learning (ML) training data is often scattered across disparate collections of datasets, called data silos. This fragmentation poses a major challenge for data-intensive ML applications: integrating and transforming data residing in different sources demand a lot of manual work and computational resources. With data privacy and security constraints, data often cannot leave the premises of data silos, hence model training should proceed in a decentralized manner. In this work, we present a vision of how to bridge the traditional data integration (DI) techniques with the requirements of modern machine learning. We explore the possibilities of utilizing metadata obtained from data integration processes for improving the effectiveness and efficiency of ML models. Towards this direction, we analyze two common use cases over data silos, feature augmentation and federated learning. Bringing data integration and machine learning together, we highlight new research opportunities from the aspects of systems, representations, factorized learning and federated learning.},
+  keywords = {Computational modeling,Data integration,Data privacy,Federated learning,Manuals,Training,Training data},
+  file = {/Users/dkapitan/Zotero/storage/CJD4NMQP/Hai et al. - 2023 - Amalur Data Integration Meets Machine Learning.pdf}
 }
 
 @article{hai2023data,
@@ -747,6 +848,24 @@
   file = {/Users/dkapitan/Zotero/storage/CA4P5A3W/Izudi et al. - 2023 - Experiences of mothers and health workers with Mom.pdf}
 }
 
+@article{jain2023analyzinga,
+  title = {Analyzing and {{Comparing Lakehouse Storage Systems}}},
+  author = {Jain, Paras and Kraft, Peter and Power, Conor and Das, Tathagata and Stoica, Ion and Zaharia, Matei},
+  year = {2023},
+  abstract = {Lakehouse storage systems that implement ACID transactions and other management features over data lake storage, such as Delta Lake, Apache Hudi and Apache Iceberg, have rapidly grown in popularity, replacing traditional data lakes at many organizations. These open storage systems with rich management features promise to simplify management of large datasets, accelerate SQL workloads, and offer fast, direct file access for other workloads, such as machine learning. However, the research community has not explored the tradeoffs in designing lakehouse systems in detail. In this paper, we analyze the designs of the three most popular lakehouse storage systems---Delta Lake, Hudi and Iceberg---and compare their performance and features among varying axes based on these designs. We also release a simple benchmark, LHBench, that researchers can use to compare other designs. LHBench is available at https://github.com/lhbench/lhbench.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/BRTL3BJ4/Jain et al. - 2023 - Analyzing and Comparing Lakehouse Storage Systems.pdf}
+}
+
+@article{jindal2021magpie,
+  title = {Magpie: {{Python}} at {{Speed}} and {{Scale}} Using {{Cloud Backends}}},
+  author = {Jindal, Alekh and Emani, K Venkatesh and Daum, Maureen and Poppe, Olga and Haynes, Brandon and Pavlenko, Anna and Gupta, Ayushi and Ramachandra, Karthik and Curino, Carlo and Mueller, Andreas and Wu, Wentao and Patel, Hiren},
+  year = {2021},
+  abstract = {Python has become overwhelmingly popular for ad-hoc data analysis, and Pandas dataframes have quickly become the de facto standard API for data science. However, performance and scaling to large datasets remain significant challenges. This is in stark contrast with the world of databases, where decades of investments have led to both sub-millisecond latencies for small queries and many orders of magnitude better scalability for large analytical queries. Furthermore, databases offer enterprise-grade features (e.g., transactions, fine-grained access control, tamper-proof logging, encryption) as well as a mature ecosystem of tools in modern clouds.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/L8ALRJQ6/Jindal et al. - 2021 - Magpie Python at Speed and Scale using Cloud Back.pdf}
+}
+
 @article{jones2021landscape,
   title = {A Landscape Survey of Planned {{SMART}}/{{HL7}} Bulk {{FHIR}} Data Access {{API}} Implementations and Tools},
   author = {Jones, James and Gottlieb, Daniel and Mandel, Joshua C and Ignatov, Vladimir and Ellis, Alyssa and Kubick, Wayne and Mandl, Kenneth D},
@@ -952,6 +1071,22 @@
   file = {/Users/dkapitan/Zotero/storage/R7JV6I6S/Mandl et al. - 2020 - Push Button Population Health The SMARTHL7 FHIR .pdf;/Users/dkapitan/Zotero/storage/Q3S3WE4H/s41746-020-00358-4.html}
 }
 
+@article{mantri2024perspective,
+  title = {A Perspective on Digital Health Platform Design and Its Implementation at National Level},
+  author = {Mantri, Manisha and Sunder, Gaur and Kadam, Sanjay and Abhyankar, Aditya},
+  year = {2024},
+  month = apr,
+  journal = {Frontiers in Digital Health},
+  volume = {6},
+  publisher = {Frontiers},
+  issn = {2673-253X},
+  doi = {10.3389/fdgth.2024.1260855},
+  urldate = {2024-04-18},
+  abstract = {{$<$}p{$>$}Accessible and affordable health services and products including medicines, vaccines, and public health are an important health agenda of all countries. It is well understood that without digital health technologies, countries will face difficulties in tackling the needs and demands of their population. Global agencies including the World Health Organization (WHO), United Nations (UN), International Telecommunication Union (ITU), etc. have been instrumental in providing various tools, and guidance through digital health strategies in improving health and digital health maturity of the countries. The Digital Health Platform Handbook (DHPH) is a toolkit published by WHO and ITU to help countries create and implement a digital health platform (DHP) to serve as the underlying infrastructure for an interoperable and integrated national digital health system. We apply the foundational principles of DHPH and provide a perspective of DHP components in a layered, enterprise architecture of a digital health infrastructure. India has rolled out the blueprint of its National Digital Health Mission (NDHM) to address the emerging needs for digitization of healthcare in the country. In this paper, we also illustrate the design and implementation of WHO-ITU DHP components at the national level by exploring India's digital health mission implementation utilizing various digital public goods to build a digital health ecosystem in the country.{$<$}/p{$>$}},
+  langid = {english},
+  keywords = {Digital health platform,India,interoperability,itu,NDHM,Standards,WHO}
+}
+
 @misc{mazumdar2023data,
   title = {The {{Data Lakehouse}}: {{Data Warehousing}} and {{More}}},
   shorttitle = {The {{Data Lakehouse}}},
@@ -1050,6 +1185,25 @@
   isbn = {978-1-4503-8629-6},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/ML94W2P2/Morales et al. - 2021 - Blockgraph proof-of-concept.pdf}
+}
+
+@article{morris2023call,
+  title = {A {{Call}} to {{Reconsider}} a {{Nationwide Electronic Health Record System}}: {{Correcting}} the {{Failures}} of the {{National Program}} for {{IT}}},
+  shorttitle = {A {{Call}} to {{Reconsider}} a {{Nationwide Electronic Health Record System}}},
+  author = {Morris, James Seymour},
+  year = {2023},
+  month = dec,
+  journal = {JMIR Medical Informatics},
+  volume = {11},
+  number = {1},
+  pages = {e53112},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
+  doi = {10.2196/53112},
+  urldate = {2024-04-18},
+  abstract = {The National Programme for IT (NPfIT) was launched in 2005 to implement seven nationwide IT services across the National Health Service (NHS). Despite the success of many of these so-called ``deliverables'', the establishment of a single nationwide electronic health record (EHR) system never fully materialised. Healthcare practitioners are all too often left without access to large sections of their patients' medical records due to their being recording on any one of a plethora of alternative EHR systems. This not only limits their ability to make well-informed clinical decisions, but also the quality of care they are able to provide. This article evaluates the medical, economic and bureaucratic implications of an NHS-wide EHR system before exploring how the shortcomings of the NPfIT should be addressed when attempting to introduce such a system in future.},
+  copyright = {This is an open-access article distributed under the terms of the Creative Commons Attribution License (https://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work, first published JMIR Medical Informatics, is properly cited. The complete bibliographic information, a link to the original publication on https://medinform.jmir.org/, as well as this copyright and license information must be included.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/LQA22C9U/Morris - 2023 - A Call to Reconsider a Nationwide Electronic Healt.pdf;/Users/dkapitan/Zotero/storage/GLIR7S2K/e53112.html}
 }
 
 @article{mrema2021application,
@@ -1206,6 +1360,18 @@
   file = {/Users/dkapitan/Zotero/storage/MV6NKF8H/ohie.org.html}
 }
 
+@techreport{organization2018classification,
+  title = {Classification of {{Digital Health Interventions}} v1.0: {{A}} Shared Language to Describe the Uses of Digital Technology for Health},
+  shorttitle = {Classification of {{Digital Health Interventions}} v1.0},
+  author = {Organization, World Health},
+  year = {2018},
+  eprint = {resrep33226},
+  eprinttype = {jstor},
+  institution = {World Health Organization},
+  urldate = {2024-04-18},
+  file = {/Users/dkapitan/Zotero/storage/VZK3KU2L/Organization - 2018 - Classification of Digital Health Interventions v1..pdf}
+}
+
 @book{otto2022designing,
   title = {Designing {{Data Spaces}}: {{The Ecosystem Approach}} to {{Competitive Advantage}}},
   shorttitle = {Designing {{Data Spaces}}},
@@ -1334,6 +1500,22 @@
   urldate = {2023-06-12},
   abstract = {The Virus Outbreak Data Network (VODAN)-Africa aims to contribute to the publication of Findable Accessible, Interoperable, and Reusable (FAIR) health data under well-defined access conditions. The next step in the VODAN-Africa architecture is to locally deploy the Center for Expanded Data Annotation and Retrieval (CEDAR) and arrange accessibility based on the `data visiting' concept. Locally curated and reposited machine-actionable data can be visited by queries or algorithms, provided that the conditions of access are met. The goal is to enable the multiple (re)use of data with secure access functionality by clinicians (patient care), an idea aligned with the FAIR-based Personal Health Train (PHT) concept. The privacy and security requirements in relation to the FAIR Data Host and the FAIRification workspace (to produce metadata) or dashboard (for the patient) must be clear to design the IT architecture. This article describes a (first) practice, a reference implementation in development, within the VODAN-Africa and Leiden University Medical Center community.},
   file = {/Users/dkapitan/Zotero/storage/YAS29HS9/Purnama Jati et al. - 2022 - Data Access, Control, and Privacy Protection in th.pdf;/Users/dkapitan/Zotero/storage/474AADCY/Data-Access-Control-and-Privacy-Protection-in-the.html}
+}
+
+@article{raso2024anonymization,
+  title = {Anonymization and {{Pseudonymization}} of {{FHIR Resources}} for {{Secondary Use}} of {{Healthcare Data}}},
+  author = {Raso, Emanuele and Loreti, Pierpaolo and Ravaziol, Michele and Bracciale, Lorenzo},
+  year = {2024},
+  journal = {IEEE Access},
+  volume = {12},
+  pages = {44929--44939},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2024.3381034},
+  urldate = {2024-04-15},
+  abstract = {Along with the creation of medical profiles of patients, Electronic Health Records have several secondary missions, such as health economy and research. The recent, increasing adoption of a common standard, i.e., the Fast Healthcare Interoperability Resources (FHIR), makes it easier to exchange medical data among the several parties involved, for example, in an epidemiological research activity. However, this exchange process is hindered by regulatory frameworks due to privacy issues related to the presence of personal information, which allows patients to be identified directly (or indirectly) from their medical data. When properly used, de-identification techniques can provide crucial support in overcoming these problems. FHIR-DIET aims to bring flexibility and concreteness to the implementation of de-identification of health data, supporting many customised data-processing behaviours that can be easily configured and tailored to match specific use case requirements. Our solution enables faster and easier cooperation between legal and IT professionals to establish and implement de-identification rules. The performance evaluation demonstrates the viability of processing hundreds of FHIR patient information data per second using standard hardware. We believe FHIR-DIET can be a valuable tool to satisfy the current regulation requirements and help to create added-value for the secondary use of healthcare data.},
+  copyright = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/ID8DIMLU/Raso et al. - 2024 - Anonymization and Pseudonymization of FHIR Resourc.pdf}
 }
 
 @article{rieke2020future,
